Ready to go live

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "start": "cd ./get-pocket-api && node ./index.js && node ./markdown.js && cd .. && hugo --gc --minify",
+     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
